examples/errors/parsing/pat-lparen-no-rparen.cn
fun f : Int -> Int [pure] = {
  (x -> 0
}

main : () [impure] = ()
